--- a/main.bib
+++ b/main.bib
@@ -397,3 +397,50 @@
 	pages         = {19--45},
 	publisher     = {Springer},
 }
+
+
+
+
+% Examples SAT usage
+
+@inproceedings{planning_92,
+	title={Planning as Satisfiability.},
+	author={Kautz, Henry A and Selman, Bart and others},
+	booktitle={ECAI},
+	volume={92},
+	pages={359--363},
+	year={1992}
+}
+
+@article{bmc_99,
+	title={Symbolic model checking without BDDs},
+	author={Biere, Armin and Cimatti, Alessandro and Clarke, Edmund and Zhu,
+	Yunshan},
+	journal={Tools and Algorithms for the Construction and Analysis of
+	Systems},
+	pages={193--207},
+	year={1999},
+	publisher={Springer}
+}
+
+@article{crypto_00,
+	title={Logical cryptanalysis as a SAT problem},
+	author={Massacci, Fabio and Marraro, Laura},
+	journal={Journal of Automated Reasoning},
+	volume={24},
+	number={1},
+	pages={165--203},
+	year={2000},
+	publisher={Springer}
+}
+
+
+@inproceedings{biology_06,
+	title={SAT in bioinformatics: Making the case with haplotype inference},
+	author={Lynce, In{\^e}s and Marques-Silva, Joao},
+	booktitle={International Conference on Theory and Applications of
+	Satisfiability Testing},
+	pages={136--141},
+	year={2006},
+	organization={Springer}
+}
