--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -616,7 +616,7 @@ in the formula to propagate symmetrical literals.
 As consequence, the solver reduces the number of decisions, that are chosen heuristically and increase the number of propagation
 that are consequence of the formula. In other words, symmetries allows to transform some "guesses" as "deductions".
 And so, improves performance of the underlying SAT solver.
-In the literature, different approaches of dynamic symmetry breaking, this section presents some of them.
+In the literature, different approaches of dynamic symmetry breaking exists, this section presents some of them.
 
 
 \subsubsection{SymChaff}
@@ -743,6 +743,7 @@ to compute symmetrical clauses.
 
 \subsection{Conclusion}
 
+Dynamic symmetry handling 
 
 %SAT solvers are fine tuned algorithm to solve propositional formula, adding additional component that modify 
 %fundamentally the behavior of a SAT solver may impact negatively this performance.
