--- a/TODO.tex
+++ b/TODO.tex
@@ -1,45 +1,45 @@
-
-
-
-SAT Theory NP complete Cite [COOK 71]
-
-Used In\\
-- Formal methods Hardware model checking;Software model checking;
-Termination analysis of term-rewrite systems ; Test pattern generation 
-(testing of software hardware) ; etc\\
-- AI planning, game n queen sudoku \\
-- Bio info Haplotype inference ; Pedigree checking ; Analysis of Genetic; Regulatory Networks; etc.\\
-- Design Automation: Equivalence checking; Delay computation; Fault diagnosis ; etc\\
-- Security: Cryptanalysis ; Inversion attacks on hash functions; etc
-
-
-Where can found \\
-- Computationally hard problems: Graph coloring, Traveling salesperson\\
-- Mathematical: van der Waerden numbers ; Quasigroup open problems  \\
-- Core engine for other solvers :0-1 ILP/Pseudo Boolean ;QBF ; \#SAT ; SMT ; MAXSAT;\\ 
-- Integrated into theorem provers :HOL ; Isabelle ;\\
-
-- Integrated into widely used software: Eclipse provisioning system based on a Pseudo Boolean solver
-Suse 10.1 dependency manager based on a custom SAT solver
-
-Interest in BMC [ ]Biere 99]
-
-
-SAT solver Def
-
-
-Input: Can encode any Boolean formula into Normal Form
-
-Classical simplification:
-- Resolution
-- Subsumption
-
-More complicated
-Hidden tautology
-BVA
-...
-Loo Heule simplification slides
-
-
-Algo CDCL
-
+%
+%
+%
+%SAT Theory NP complete Cite [COOK 71]
+%
+%Used In\\
+%- Formal methods Hardware model checking;Software model checking;
+%Termination analysis of term-rewrite systems ; Test pattern generation 
+%(testing of software hardware) ; etc\\
+%- AI planning, game n queen sudoku \\
+%- Bio info Haplotype inference ; Pedigree checking ; Analysis of Genetic; Regulatory Networks; etc.\\
+%- Design Automation: Equivalence checking; Delay computation; Fault diagnosis ; etc\\
+%- Security: Cryptanalysis ; Inversion attacks on hash functions; etc
+%
+%
+%Where can found \\
+%- Computationally hard problems: Graph coloring, Traveling salesperson\\
+%- Mathematical: van der Waerden numbers ; Quasigroup open problems  \\
+%- Core engine for other solvers :0-1 ILP/Pseudo Boolean ;QBF ; \#SAT ; SMT ; MAXSAT;\\ 
+%- Integrated into theorem provers :HOL ; Isabelle ;\\
+%
+%- Integrated into widely used software: Eclipse provisioning system based on a Pseudo Boolean solver
+%Suse 10.1 dependency manager based on a custom SAT solver
+%
+%Interest in BMC [ ]Biere 99]
+%
+%
+%SAT solver Def
+%
+%
+%Input: Can encode any Boolean formula into Normal Form
+%
+%Classical simplification:
+%- Resolution
+%- Subsumption
+%
+%More complicated
+%Hidden tautology
+%BVA
+%...
+%Loo Heule simplification slides
+%
+%
+%Algo CDCL
+%
