--- a/main.bib
+++ b/main.bib
@@ -400,6 +400,17 @@
 
 
 
+% Special form CNF 2-SAT, XOR, Horn
+
+@inproceedings{schaefer1978complexity,
+	title={The complexity of satisfiability problems},
+	author={Schaefer, Thomas J},
+	booktitle={Proceedings of the tenth annual ACM symposium on Theory of computing},
+	pages={216--226},
+	year={1978},
+	organization={ACM}
+}
+
 
 % Examples SAT usage
 
