--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -3,77 +3,81 @@
 In this thesis, our goal is to exploit the symmetrical properties of SAT problems.
 Before, we get to the heart of the matter, we first introduce the Boolean satisfiability (SAT)  problem.
 This problem is a propositional formula representing the constraints of a system.
-A tool that aims to satisfy such formulas is called a SAT solver. It answers $\sat$ when all constraints
-present in the formula can be satisfied and $\unsat$ otherwise.
+A tool that aims to satisfy such formulas is called a SAT solver. 
+
+%It answers $\sat$ when all constraints
+%present in the formula can be satisfied and $\unsat$ otherwise.
 
 
 \section{SAT basics}
-The most basic block of satisfiability problem is the \emph{Boolean} or \emph{propositional variable}.
-It has two possible values : true or false (noted respectively $\true$ or $\false$).
-We denote \emph{literal} $l$, a propositional variable or its negation.
+The satisfiability problem is constituted of \emph{Boolean} or \emph{propositional variable}.
+It has two possible values, true or false (noted respectively $\true$ or $\false$).
+We call \emph{literal}, a propositional variable or its negation.
 For a given variable $x$, the positive literal is represented by $x$ and the negative one by $\neg x$.
 Given a formula $\varphi$, we denote $\Vars_\varphi$ ($\Lits_\varphi$) the set of variables (literals) used in the formula (the index in $\Vars_\varphi$ and $\Lits_\varphi$ is usually omitted when
 clear from context).
 To build more complex formula, it exists different operators, $\neg, \lor$ and $\land$ that are respectively negation, disjunction and conjunction. Others operators like $\Rightarrow, \Leftrightarrow$ and
-$\oplus, \cdots$ respectively called implication, equivalence and exclusive disjunction (xor), $\cdots$ can be written with the basic one.
+$\oplus, \cdots$ respectively called implication, equivalence and exclusive disjunction (xor), $\cdots$ can be 
+expressed with the basic ones.
 For example $a \Rightarrow b$ can be expressed as $ \neg a \lor b$.
-These operators have a different priority and given in decreasing order:
-negation ($\neg$), conjunction ($\land$), disjunction ($\lor$). To ensure
-the priority, constraints can be set between parenthesis.
+To ensure the priority of these operators, constraints are expressed between parenthesis.
+In the absence of its, the following priority order applies (from the highest to the lowest priority):
+negation ($\neg$), conjunction ($\land$), disjunction ($\lor$).
 
-%The meaning of basic operators are given in the following truth table~\ref{tab:truthtable}:
-\begin{table}[!htbp]
- \centering
- \begin{tabular}{cc|ccc}
-  $x$ & $y$ & $\neg x$ & $x \lor y$ & $x \land y$ \\
-  \toprule
-  0 & 0 & 1 & 0 & 0 \\
-  \midrule
-  0 & 1 & 1 & 1 & 0 \\
-  \midrule
-  1 & 0 & 0 & 1 & 0 \\
-  \midrule
-  1 & 1 & 0 & 1 & 1 \\
-  \bottomrule
- \end{tabular}
- \caption{Truth table of basic operators}
- \label{tab:truthtable}
-\end{table}
+
 The value given to each variable of a formula is called an \emph{assignment} noted $\alpha$ and defined as follows:
  $$\alpha: \Vars \mapsto \{ \true, \false \}$$
  As usual $\alpha$ is said \emph{total}, or \emph{complete}, when all elements of $\Vars$ have an image by
 $\alpha$, otherwise it is \emph{partial}. By abuse of notation, an assignment is
-often represented by the set of its true literals.  The set of all (possibly
-partial) assignments of $\Vars$ is noted $\Assignments(\Vars)$.
-A \emph{truth table} gives an evaluation of all possible assignment for a given formula.
-\Cref{tab:truthtable} shows the evaluation of negation, conjunction and disjunction operators.
-For convenience, true value (\true) is also represented as $1$, a false value (\false) is represented as $0$.
+often represented by the set of its true literals. For example, $\alpha = \{\neg x_1, x_3 \}$ means that $x_1$
+have the false value and $x_3$ have the true value.
+  The set of all (possibly partial) assignments of $\Vars$ is noted $\Assignments(\Vars)$.
+A \emph{truth table} gives an evaluation of all possible assignments for a given formula.
+\Cref{tab:truthtable} shows the evaluation of negation ($\neg$), conjunction ($\land$), disjunction ($\lor$) operators.
+For convenience, true value (\true) is also represented by $1$ and false value (\false) is represented by $0$.
 When a formula is always true independently from the assignment, it is called a \emph{tautology} $x \lor \neg x$ is 
 an example of tautologous formula.
+
+
+\begin{table}[!htbp]
+	\centering
+	\begin{tabular}{cc|ccc}
+		$x$ & $y$ & $\neg x$ & $x \lor y$ & $x \land y$ \\
+		\toprule
+		0 & 0 & 1 & 0 & 0 \\
+		\midrule
+		0 & 1 & 1 & 1 & 0 \\
+		\midrule
+		1 & 0 & 0 & 1 & 0 \\
+		\midrule
+		1 & 1 & 0 & 1 & 1 \\
+		\bottomrule
+	\end{tabular}
+	\caption{Truth table of basic operators}
+	\label{tab:truthtable}
+\end{table}
 
 \subsection{Normal forms}
 In Boolean logic, it exists some structural properties, called \emph{normal form}.
 To present them, we first need to introduce \emph{clause} and \emph{cube} concepts.
-A \emph{clause} $\omega$ is a finite disjunction of literals represented by:
- $$\omega = \bigvee_{i=1}^k l_i$$
+A \emph{clause} $\omega$ is a finite disjunction of literals:
+$$\omega = \bigvee_{i=1}^k l_i \text{ , or the set of its literals } \omega = \{l_i\}_{i \in \llbracket 1,k \rrbracket}$$
  
- 
-And a \emph{cube} $\gamma$ is a finite conjunction of literals represented by:
+A \emph{cube} $\gamma$ is a finite conjunction of literals represented by:
 $$\gamma = \bigwedge_{i=1}^k l_i$$
 
 % Or equivalently by the set of its literals:
 %$$\omega = \{l_i\}_{i \in \llbracket 1,k \rrbracket}$$
-On respect to its size, a clause is said \emph{unary, binary, ternary, $n$-ary} if it contains respectively one, two, three, or $n$ literals.
+With respect to its size, a clause is said to be \emph{unary, binary, ternary, $n$-ary} if it contains respectively one, two, three, or $n$ literals.
 
 The clause form has a property called \emph{subsumption}. 
 When a clause $\omega_1$ is a subset of another clause $\omega_2$ noted $\omega_1 \subset \omega_2$. And any 
 assignment that satisfies $\omega_1$ also satisfies $\omega_2$, so $\omega_2$ is \emph{redundant} towards $\omega_1$ and so can be removed of the formula.
 
-\emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses
- A CNF can be either noted:
+\emph{Conjunctive Normal Form} (CNF) of a formula is a finite conjunction of clauses:
   $$\varphi = \bigwedge_{i=1}^k \omega_i$$
   
-\emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes and noted:
+\emph{Disjunctive normal form} (DNF) of a formula is finite disjunction of cubes:
   $$\varphi = \bigvee_{i=1}^k \gamma_i$$
 The following table is a summary of laws about Boolean formulas that allow to transform any formula to
 a normal form.
@@ -111,9 +115,9 @@ a normal form.
 Every formula can be transformed into a normal form with different complexity and the resulting formula is 
 \emph{equivalent}.  
 In other words, every assignment $\alpha$ that satisfies formula $\varphi$  also models the resulting formula $\psi$
-and vice-versa, denoted as $\varphi \equiv \psi$.
- Also, we say a formula $\psi$ is \emph{logical consequence} of a formula $\varphi$ is every model of $\varphi$
- is also a model of $\psi$ and is denoted as $\varphi \models \psi$.
+and vice-versa, denoted by $\varphi \equiv \psi$.
+ Also, we say a formula $\psi$ is a \emph{logical consequence} of a formula $\varphi$ is every model of $\varphi$
+ is also a model of $\psi$ and is denoted by $\varphi \models \psi$.
 
 Conjunctive normal form is the input form of state-of-the-art solvers. Any propositional
 formula can be transformed in CNF form with a polynomial complexity. Conversely, DNF form have
@@ -161,45 +165,57 @@ Note that each cube in the problem in DNF form is a solution in the equivalent C
 
 \subsection{An NP-complete problem}
 The SAT problem is the first NP-complete algorithm proven by Stephen Cook in 1971~\cite{cook1971complexity}.
-NP-completeness means that a SAT problem can be solved with a non-deterministic machine in polynomial time (NP) and is also NP-hard. A problem is said NP-hard if everything in NP can be transformed into it in polynomial time. 
+NP-completeness means that a SAT problem can be solved with a non-deterministic Turing machine in polynomial time (NP) and is also NP-hard. A problem is said NP-hard if everything in NP can be transformed into it in polynomial time. 
 One of the most important unsolved problems in theoretical computer science is the P versus NP problem.
 This question is one of the seven millennium prize problems.
 
 
-\subsection{Easy to solve particular forms}
-Some particular form of the SAT problems can be computed in linear time for 2-SAT~\cite{aspvall1979linear}
-where each clause is in binary form. In this case, it suffices to create a graph in which each clause is transformed into implication. For example, the clause $x \lor y$ will be transformed into $ \neg x \Rightarrow y,
-\neg y \Rightarrow x$. After computing strong connected component on this graph, a 
-search of the positive and negative literal in the same  strong connected component suffices 
+\subsection{Particular forms easy to solve}
+In some particular forms, SAT problems can be computed with polynomial algorithm.
+
+
+\textbf{2-SAT~\cite{aspvall1979linear}.}l
+In this particular form, the given CNF formula contains only binary clauses.
+In this case, it suffices to create a graph in which each clause is transformed into implication. For example, the clause $x \lor y$ will be transformed into $ \neg x \Rightarrow y,
+\neg y \Rightarrow x$. After computing \emph{strong connected component} on this graph, to be looking for
+ the positive and negative forms of the same variable, in the same  strong connected component suffices 
 to determine the satisfiability of the formula. If it is the case, the formula is \unsat. Otherwise 
-a solution can be deduce and the problem is \sat.
+a solution can be deduce and the problem is \sat. This algorithm can be computed in linear time complexity.
 
-Other particular form  can be solved in  polynomial time like Horn SAT~\cite{aspvall1979linear} in which it suffices to  apply \emph{unit propagation} explained thereafter in \cref{sec:dpll} until fix point. Simply it satisfies unit clause to satisfy them. To finish decision procedure, the formula must contains only Horn clauses. If the empty clause is reached, then the problem is
-$\unsat$ and $\sat$ otherwise.
+\textbf{Horn SAT.} In this particular form, the given CNF formula contains only Horn clauses. It exists three form
+of Horn clause: \emph{strict Horn clause} that contains only one positive literal and at least one negative literal,
+\emph{positive Horn clause} that contains only one positive literal and no negative literals
+\emph{negative Horn clause} that contains only negative literals.
+To solve this particular form of formula, it suffices to  apply \emph{Boolean constraint propagation} (BCP) or \emph{unit propagation} explained thereafter in \cref{sec:dpll} until fix point.
+Roughly speaking, It satisfies all unit clauses in cascade. Either an empty clause was deduced and the problem
+is \unsat or the fix point is reached and the formula is \sat. Like 2-SAT, this algorithm can also be computed
+in linear time complexity.
 
-Xor-Satisfiability  is also a particular form where each clause encodes exclusive or (xor).
-This problem can be seen as linear equations. Gaussian elimination allows to solve this kind of
+
+\textbf{XOR SAT.} In this particular form, each clause contains xor ($\oplus$) operator rather than or ($\lor$).
+This problem can be seen as a system of linear equations. Gaussian elimination allows to solve this kind of
 problem is polynomial time.
 
+The membership of polynomial class (P) of the particular form of satisfiability problems describes above is a special case of Schaefer's dichotomy theorem~\cite{schaefer1978complexity}.
 
-\subsection{Related problems}
+\subsection{Some related problems}
 
 Different kind of problems related to SAT is presented is this section.
-One of them is sharp-SAT (\#SAT), it purpose is to count the umber of solution in CNF.
-Note that, in DNF form it is trivial, it is just the number of cube present in the formula.
+One of them is sharp-SAT (\#SAT), its purpose is to count the number of solutions in a CNF.
 
-Another related problem is maximum satisfiability problem (MAX-SAT). In this case the problem
-is to find the maximum subset of clauses that can be satisfied for a formula. Different variant
-of this problem exists. For example, some constraints must be satisfied (hard clauses) and MAX-SAT
-is applied on remaining \emph{soft} clauses.
+
+Another related problem is maximum satisfiability problem (MAX-SAT). In this case, the problem
+is to find the maximum subset of clauses that can be satisfied for a formula. Different variants
+of this problem exist. For example, some constraints must be satisfied (hard clauses) and MAX-SAT
+is applied on the remaining clauses called \emph{soft} clauses.
 
 The last related problem is quantified Boolean formula (QBF) where the quantifiers $\exists$ and
-$\forall$ are present in the formula.
-
+$\forall$ are present in the formula. For example, $\forall x\, \exists y\, \exists z \, (x \lor y) \land z$.
+This particular form is a generalization of the SAT problem with PSPACE complexity.
 
 \subsection{Solving a SAT problem}
 Two kinds of algorithms exist to solve satisfiability problems.
-First, the \emph{incomplete} algorithm which does not provide any guarantee that will eventually report either any satisfiable assignment or declare that formula is unsatisfiable. This kind of algorithm is out of scope of this thesis. 
+First, the \emph{incomplete} algorithm~\cite{biere2009handbook} which does not provide any guarantee that will eventually report either any satisfiable assignment or declare the formula unsatisfiable. This kind of algorithm is out of scope of this thesis. 
 Second, the \emph{complete} algorithm, which provides a guarantee that if an assignment exists
 it will be reached or it will declare that formula is unsatisfiable.
 This section describes different \emph{complete }algorithm to solve a propositional formula.
@@ -207,7 +223,7 @@ This section describes different \emph{complete }algorithm to solve a propositio
 \subsubsection{A naive algorithm}
 A naive approach to solve a SAT problem is to try all possible assignments.
 For a propositional formula with $n$ variables, it leads to $2^n$ assignments in the worse case.  
-\Cref{fig:naive_algo} illustrate the search tree for a given problem with six variables.
+\Cref{fig:naive_algo} illustrates the search tree for a given problem with six variables.
 In this case $\alpha_{11}$ ($\neg x_1, \neg x_2, x_3, \neg x_4, x_5, \neg x_6 $) is found as a solution of the problem. In the general case,
 this algorithm is  intractable on real problems even for a formula with few variables.
 
@@ -218,12 +234,16 @@ this algorithm is  intractable on real problems even for a formula with few vari
  \label{fig:naive_algo}
 \end{figure}
 
-\subsubsection{Davis Putnam Logemann Loveland (DPLL) algorithm}\label{sec:dpll}
-One of the first non-memory-intensive algorithm to solve the SAT problems is 
-the Davis Putnam Logemann Loveland (DPLL) algorithm~\cite{dpll_62}. 
-It explores a binary tree using depth first search as given in \Cref{algo:dpll}.
-The construction of the tree is related to a \emph{decision} literal (\cref{algo:dpll:decision}) then,
+\subsubsection{Davis Putnam Logemann Loveland algorithm (DPLL)}\label{sec:dpll}
+One of the first non-memory-intensive algorithm developed to solve SAT problems is 
+the Davis Putnam Logemann Loveland algorithm~\cite{dpll_62} (DPLL). 
+It explores a binary tree using depth first search as shown in \Cref{algo:dpll}.
+The construction of the tree  relies on the \emph{decision} made (on \cref{algo:dpll:decision}) then,
+
+
 recursive call with each value are checked.
+
+
 When a leaf report \unsat (\cref{algo:dpll:unsatbranch}), other branches are explored.
 By recursive construction of the algorithm, when positive and negative value of a literal reach \unsat,
 solver \emph{backtracks} at most one level, this fact is called \emph{chronological backtracking}.
